--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,17 @@
     <meta name="theme-color" content="#0564bd" />
     <meta name="author" content="Ahmed Zougari" />
     <link rel="icon" type="image/png" href="./img/favicon.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap"
+      rel="stylesheet"
+    />
     <meta
       name="keywords"
-      content="ahmed, zougari, zougari47, ibnelkhayat, developer, javascript, marrakech, freelancer, website, programmer, site, ahmedzougari"
+      content="dinusha, samarakoon, developer, javascript, marrakech, freelancer, website, programmer, site, dinushaAsamarakoon1999"
     />
     <meta
       name="description"
-      content="I'm a Frontend Developer based in Morocco who is passionate about delivering value to businesses through technology. I love the challenge of finding creative solutions to problems, and I enjoy collaborating with teams to achieve great results."
+      content="I’m a Full Stack Developer with a focus on Backend Development, based in Sri Lanka. I am passionate about leveraging technology to deliver value to businesses. I thrive on the challenge of finding innovative solutions to complex problems and enjoy collaborating with teams to achieve exceptional results."
     />
     <meta
       name="google-site-verification"
@@ -25,15 +29,15 @@
       src="https://www.googletagmanager.com/gtag/js?id=G-F3SK5CL6LE"
     ></script>
     <script>
-      window.dataLayer = window.dataLayer || []
+      window.dataLayer = window.dataLayer || [];
       function gtag() {
-        dataLayer.push(arguments)
+        dataLayer.push(arguments);
       }
-      gtag('js', new Date())
+      gtag("js", new Date());
 
-      gtag('config', 'G-F3SK5CL6LE')
+      gtag("config", "G-F3SK5CL6LE");
     </script>
-    <title>Ahmed Zougari - Frontend/Fullstack Developer</title>
+    <title>Dinusha Samarakoon - Frontend/Fullstack Developer</title>
   </head>
   <body
     data-bs-spy="scroll"
