nav bar customized

--- a/src/index.html
+++ b/src/index.html
@@ -83,16 +83,25 @@
                 <a href="#portfolio" class="nav-link">Projects</a>
               </li>
               <li class="nav-item">
-                <a href="#contact" class="nav-link">Contact</a>
+                <a
+                  href="https://drive.google.com/file/d/1tWzDV6bJtvKbruvY5AmoEvPPsFTFZD1G/view?usp=sharing"
+                  target="_blank"
+                  class="nav-link"
+                  download
+                  >Resume</a
+                >
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
+                <a href="#contact" class="nav-link">Contact</a>
+              </li> -->
+              <!-- <li class="nav-item">
                 <a
                   href="https://blog.ahmedzougari.com"
                   target="_blank"
                   class="nav-link"
                   >Blog</a
                 >
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
