--- a/src/index.html
+++ b/src/index.html
@@ -122,33 +122,39 @@
                 data-aos-duration="1000"
               >
                 <p>Hello! 👋 My name is</p>
-                <h1>AHMED ZOUGARI</h1>
+                <h1>DINUSHA SAMARAKOON</h1>
                 <p><span id="headline"></span></p>
                 <div class="social-links mx-auto mx-lg-0">
                   <div class="row">
                     <div class="col-3">
-                      <a href="mailto:contact@ahmedzougari.com" target="_blank">
+                      <a
+                        href="mailto:dinushaanuruddha1999@gmail.com"
+                        target="_blank"
+                      >
                         <i class="bi bi-envelope-fill"></i>
                       </a>
                     </div>
                     <div class="col-3">
-                      <a href="https://github.com/zougari47" target="_blank">
+                      <a
+                        href="https://github.com/dinushaAsamarakoon"
+                        target="_blank"
+                      >
                         <i class="bi bi-github"></i>
                       </a>
                     </div>
                     <div class="col-3">
                       <a
-                        href="https://www.linkedin.com/in/zougari47/"
+                        href="https://www.linkedin.com/in/dinusha-samarakoon-4493b721b"
                         target="_blank"
                       >
                         <i class="bi bi-linkedin"></i>
                       </a>
                     </div>
-                    <div class="col-3">
+                    <!-- <div class="col-3">
                       <a href="https://twitter.com/zougari47" target="_blank">
                         <i class="bi bi-twitter"></i>
                       </a>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               </section>
