hero section pasted

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
       <nav class="navbar navbar-expand-lg navbar-light py-3" id="header">
         <div class="container">
           <a class="navbar-brand" href="/">
-            <img src="./img/logo.svg" alt="logo" />
+            <img src="./img/dinusha_samarakoon.png" alt="logo" />
           </a>
 
           <button id="theme-btn" class="align-self-center ms-auto me-3">
@@ -171,12 +171,12 @@
 
                 <div class="curtain">
                   <img
-                    src="./img/ahmed_zougari.png"
+                    src="./img/dinusha.jpg"
                     crossorigin=""
                     data-sampler="simplePlaneTexture"
                     width="400"
                     height="400"
-                    alt="Ahmed Zougari"
+                    alt="Dinusha Samarakoon"
                   />
                 </div>
               </div>
