about section pasted

--- a/src/index.html
+++ b/src/index.html
@@ -190,7 +190,7 @@
         <!-- ==== About ==== -->
         <div id="about">
           <div class="container">
-            <div class="row">
+            <div class="row align-items-start">
               <div class="col-12 col-lg-6 d-grid align-content-center">
                 <section
                   id="about_section"
@@ -201,22 +201,27 @@
                 >
                   <h1>ABOUT ME</h1>
                   <p>
-                    I'm a Frontend Developer based in Morocco who is passionate
-                    about delivering value to businesses through technology. I
-                    love the challenge of finding creative solutions to
-                    problems, and I enjoy collaborating with teams to achieve
-                    great results.<br />
+                    I’m a Full Stack Developer with a focus on Backend
+                    Development, based in Sri Lanka. I am passionate about
+                    leveraging technology to deliver value to businesses. I
+                    thrive on the challenge of finding innovative solutions to
+                    complex problems and enjoy collaborating with teams to
+                    achieve exceptional results.<br />
                   </p>
                   <p>
-                    I am dedicated to keeping up-to-date with the latest
-                    technologies and trends to provide the best solutions for my
-                    clients.
+                    I am committed to staying up-to-date with the latest
+                    technologies and trends to provide the most effective
+                    solutions for my clients. My expertise lies in server-side
+                    logic, data storage solutions, and ensuring high performance
+                    and responsiveness to requests from the front-end.
                   </p>
                   <p>
-                    I pay great attention to detail in the design and
+                    I pay great attention to detail in the architecture and
                     development of my projects. My ultimate goal is to create
-                    software that is both user-friendly and impactful in
-                    achieving the client's objectives.
+                    software that is efficient, scalable, and meets the client’s
+                    objectives effectively. I strive to build applications that
+                    are not only robust and reliable but also deliver a seamless
+                    user experience by integrating front-end elements as needed.
                   </p>
                 </section>
               </div>
@@ -230,6 +235,49 @@
                   <h1>SKILLS</h1>
                   <div class="row">
                     <div class="col-6 col-md-4">
+                      <img src="./img/stack-icons/icons8-java.gif" alt="java" />
+                      <span>Java</span>
+                    </div>
+                    <div class="col-6 col-md-4">
+                      <img
+                        src="./img/stack-icons/icons8-spring-boot-100.png"
+                        alt="springboot"
+                      />
+                      <span>Spring Boot</span>
+                    </div>
+                    <div class="col-6 col-md-4">
+                      <img
+                        src="./img/stack-icons/icons8-c++-100.png"
+                        alt="cpp"
+                      />
+                      <span>C++</span>
+                    </div>
+                    <div class="col-6 col-md-4">
+                      <img
+                        src="./img/stack-icons/icons8-postgresql-100.png"
+                        alt="postgresql"
+                      />
+                      <span>PostgreSQL</span>
+                    </div>
+                    <div class="col-6 col-md-4">
+                      <img
+                        src="./img/stack-icons/icons8-mysql-100.png"
+                        alt="mysql"
+                      />
+                      <span>MySQL</span>
+                    </div>
+                    <div class="col-6 col-md-4">
+                      <img
+                        src="./img/stack-icons/icons8-mysql-100(3).png"
+                        alt="php"
+                      />
+                      <span>PHP</span>
+                    </div>
+                    <div class="col-6 col-md-4">
+                      <img src="./img/stack-icons/node.svg" alt="node" />
+                      <span>Node</span>
+                    </div>
+                    <div class="col-6 col-md-4">
                       <img src="./img/stack-icons/html.svg" alt="html" />
                       <span>HTML</span>
                     </div>
@@ -237,17 +285,17 @@
                       <img src="./img/stack-icons/css.svg" alt="css" />
                       <span>CSS</span>
                     </div>
-                    <div class="col-6 col-md-4">
+                    <!-- <div class="col-6 col-md-4">
                       <img src="./img/stack-icons/sass.svg" alt="sass" />
                       <span>SASS</span>
-                    </div>
-                    <div class="col-6 col-md-4">
+                    </div> -->
+                    <!-- <div class="col-6 col-md-4">
                       <img
                         src="./img/stack-icons/bootstrap.svg"
                         alt="bootstrap"
                       />
                       <span>Bootstrap</span>
-                    </div>
+                    </div> -->
                     <div class="col-6 col-md-4">
                       <img
                         src="./img/stack-icons/tailwind.svg"
@@ -277,18 +325,15 @@
                       <img src="./img/stack-icons/next.svg" alt="next" />
                       <span>Next</span>
                     </div>
-                    <div class="col-6 col-md-4">
-                      <img src="./img/stack-icons/node.svg" alt="node" />
-                      <span>Node</span>
-                    </div>
+
                     <div class="col-6 col-md-4">
                       <img src="./img/stack-icons/git.svg" alt="git/github" />
                       <span>Git / GitHub</span>
                     </div>
-                    <div class="col-6 col-md-4">
+                    <!-- <div class="col-6 col-md-4">
                       <img src="./img/stack-icons/astro.svg" alt="Astro" />
                       <span>Astro</span>
-                    </div>
+                    </div> -->
                   </div>
                 </section>
               </div>
