styel attributes removed from the contact section

--- a/src/index.html
+++ b/src/index.html
@@ -787,7 +787,7 @@
         <!-- ==== End Portfolio === -->
 
         <!-- === Contact ====  -->
-        <div id="contact" style="margin-top: 200px; margin-bottom: 200px">
+        <div id="contact">
           <section>
             <div class="container mt-5">
               <p
@@ -797,12 +797,7 @@
                 You can’t solve a problem on the same level that it was created.
                 You have to rise above it to the next level.
               </p>
-              <p
-                style="font-family: 'Great Vibes', cursive"
-                class="fs-1 text-center"
-              >
-                - Albert Einstein
-              </p>
+              <p class="fs-1 text-center">- Albert Einstein</p>
 
               <!-- <div class="row"> -->
               <!-- <div
