second p tag commented

--- a/src/index.html
+++ b/src/index.html
@@ -790,13 +790,11 @@
         <div id="contact">
           <section>
             <div class="container mt-5">
-              <p
-                class="text-dark justify-content-center text-center fs-4 font-family"
-              >
+              <p class="text-dark justify-content-center text-center fs-4">
                 You can’t solve a problem on the same level that it was created.
                 You have to rise above it to the next level.
               </p>
-              <p class="fs-1 text-center">- Albert Einstein</p>
+              <!-- <p class="fs-1 text-center">- Albert Einstein</p> -->
             </div>
           </section>
         </div>
