--- a/src/index.html
+++ b/src/index.html
@@ -790,10 +790,10 @@
         <div id="contact">
           <section>
             <div class="container mt-5">
-              <p class="text-dark justify-content-center text-center fs-4">
+              <!-- <p class="text-dark justify-content-center text-center fs-4">
                 You can’t solve a problem on the same level that it was created.
                 You have to rise above it to the next level.
-              </p>
+              </p> -->
               <!-- <p class="fs-1 text-center">- Albert Einstein</p> -->
             </div>
           </section>
