--- a/src/index.html
+++ b/src/index.html
@@ -813,7 +813,7 @@
                   </div>
                 </div>
 
-                <div
+                <!-- <div
                   class="contact_form col-12 col-lg-8 d-grid align-content-center"
                 >
                   <form
@@ -916,7 +916,7 @@
                       </div>
                     </div>
                   </form>
-                </div>
+                </div> -->
               </div>
             </div>
           </section>
