remove only form by keeping surrounding div

--- a/src/index.html
+++ b/src/index.html
@@ -813,10 +813,10 @@
                   </div>
                 </div>
 
-                <!-- <div
+                <div
                   class="contact_form col-12 col-lg-8 d-grid align-content-center"
                 >
-                  <form
+                  <!-- <form
                     action=""
                     id="contact_form"
                     name="portfolio_form"
@@ -915,8 +915,8 @@
                         <span class="visually-hidden">Loading...</span>
                       </div>
                     </div>
-                  </form>
-                </div> -->
+                  </form> -->
+                </div>
               </div>
             </div>
           </section>
