contact.js connections removed

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
       content="PBNvZp4y0C4ul3V64DmyjKb3EHKD4F9QEAv9tsgH4jE"
     />
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
+    <!-- <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-F3SK5CL6LE"
     ></script>
@@ -36,7 +36,7 @@
       gtag("js", new Date());
 
       gtag("config", "G-F3SK5CL6LE");
-    </script>
+    </script> -->
     <title>Dinusha Samarakoon - Frontend/Fullstack Developer</title>
   </head>
   <body
@@ -813,9 +813,7 @@
                   </div>
                 </div>
 
-                <div
-                  class="contact_form col-12 col-lg-8 d-grid align-content-center"
-                >
+                <div class="col-12 col-lg-8 d-grid align-content-center">
                   <!-- <form
                     action=""
                     id="contact_form"
