surrounding div of form removed

--- a/src/index.html
+++ b/src/index.html
@@ -813,8 +813,8 @@
                   </div>
                 </div>
 
-                <div class="col-12 col-lg-8 d-grid align-content-center">
-                  <!-- <form
+                <!-- <div class="col-12 col-lg-8 d-grid align-content-center"> -->
+                <!-- <form
                     action=""
                     id="contact_form"
                     name="portfolio_form"
@@ -914,7 +914,7 @@
                       </div>
                     </div>
                   </form> -->
-                </div>
+                <!-- </div> -->
               </div>
             </div>
           </section>
