--- a/src/index.html
+++ b/src/index.html
@@ -787,34 +787,49 @@
         <!-- ==== End Portfolio === -->
 
         <!-- === Contact ====  -->
-        <div id="contact">
+        <div id="contact" style="margin-top: 200px; margin-bottom: 200px">
           <section>
-            <div class="container">
-              <h1>CONTACT ME</h1>
-              <div class="row">
-                <div
-                  class="hello mb-4 mb-lg-0 col-12 col-lg-4 d-grid align-content-center"
-                  data-aos="fade-right"
-                  data-aos-duration="1000"
-                >
-                  <span>Have an idea ?</span>
-                  <p>Let's make it true!</p>
+            <div class="container mt-5">
+              <p
+                style="font-family: Arial, sans-serif"
+                class="text-dark justify-content-center text-center fs-4 font-family"
+              >
+                You can’t solve a problem on the same level that it was created.
+                You have to rise above it to the next level.
+              </p>
+              <p
+                style="font-family: 'Great Vibes', cursive"
+                class="fs-1 text-center"
+              >
+                - Albert Einstein
+              </p>
 
-                  <div class="mt-5 more_info">
-                    <p>
-                      <i class="bi bi-geo-alt text-accent me-2 fs-5"></i>
-                      Morocco
-                    </p>
+              <!-- <div class="row"> -->
+              <!-- <div
+                class="hello mb-4 mb-lg-0 align-content-center"
+                data-aos="fade-right"
+                data-aos-duration="1000"
+              >
+                <span>Have an idea ?</span>
+                <p>Let's make it true!</p> -->
 
-                    <p>
-                      <i class="bi bi-envelope-fill text-accent me-2 fs-5"></i>
-                      contact@ahmedzougari.com
-                    </p>
-                  </div>
+              <!-- <div class="mt-5 more_info">
+                  <p class="text-center">
+                    <i class="bi bi-geo-alt text-accent me-2 fs-5"></i>
+                    Sri Lanka
+                  </p>
+
+                  <p class="text-center">
+                    <i class="bi bi-envelope-fill text-accent me-2 fs-5"></i>
+                    dinushaanuruddha1999@gmail.com
+                  </p>
                 </div>
+              </div> -->
 
-                <!-- <div class="col-12 col-lg-8 d-grid align-content-center"> -->
-                <!-- <form
+              <!-- <div
+                  class="contact_form col-12 col-lg-8 d-grid align-content-center"
+                >
+                  <form
                     action=""
                     id="contact_form"
                     name="portfolio_form"
@@ -913,9 +928,9 @@
                         <span class="visually-hidden">Loading...</span>
                       </div>
                     </div>
-                  </form> -->
-                <!-- </div> -->
-              </div>
+                  </form>
+                </div> -->
+              <!-- </div> -->
             </div>
           </section>
         </div>
