--- a/src/index.html
+++ b/src/index.html
@@ -940,27 +940,34 @@
       <!-- ==== Start footer ====  -->
       <footer id="footer">
         <div class="container">
-          <div class="row row-cols-1 row-cols-lg-2">
-            <div>
-              Made with ❤️, By&nbsp;<span class="author"> Ahmed Zougari</span>,
-              Open sourced on&nbsp;
-              <a
+          <div class="row row-cols-1 row-cols-lg-2 align-content-centers">
+            <div class="justify-content-center">
+              <!-- Made with ❤️, By&nbsp;<span class="author"> Ahmed Zougari</span>,
+              Open sourced on&nbsp; -->
+              <p class="align-content-center">
+                &copy;2024 <span class="author">Dinusha Samarakoon</span> All
+                rights reserved.
+              </p>
+              <!-- <a
                 href="https://github.com/zougari47/portfolio-template"
                 target="_blank"
                 ><i class="bi bi-github"></i
-              ></a>
+              ></a> -->
             </div>
 
             <div class="text-center text-lg-end">
-              <a href="https://twitter.com/zougari47" target="_blank">
+              <!-- <a href="https://twitter.com/zougari47" target="_blank">
                 <i class="bi bi-twitter"></i>
-              </a>
+              </a> -->
 
-              <a href="https://github.com/zougari47" target="_blank">
+              <a href="https://github.com/dinushaAsamarakoon" target="_blank">
                 <i class="bi bi-github"></i>
               </a>
 
-              <a href="https://linkedin.com/in/zougari47" target="_blank">
+              <a
+                href="https://www.linkedin.com/in/dinusha-samarakoon-4493b721b"
+                target="_blank"
+              >
                 <i class="bi bi-linkedin"></i>
               </a>
             </div>
